@@ -88,7 +88,7 @@ pthread_exit (void *value_ptr)
        * Implicit POSIX handles are cleaned up in ptw32_throw() now.
        */
 
-#if ! defined (__MINGW32__) || defined (__MSVCRT__)
+#if ! defined (__MINGW32__) || defined (__MSVCRT__)  || defined (__DMC__)
       _endthreadex ((unsigned) value_ptr);
 #else
       _endthread ();
